--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <gmaven.runtime.version></gmaven.runtime.version>
         <gmaven.version>1.5</gmaven.version>
-        <groovy.major.version>1.8</groovy.major.version>
+        <groovy.major.version>2.3</groovy.major.version>
         <groovy.version>${groovy.major.version}.6</groovy.version>
+        <!-- <groovy.version>${groovy.major.version}.6</groovy.version> for groovy 1.8 -->
+        <org.spockframework.version>0.7-groovy-2.0</org.spockframework.version>
     </properties>
 
 
@@ -45,6 +47,7 @@
                 <artifactId>gmaven-plugin</artifactId>
                 <version>${gmaven.version}</version>
                 <configuration>
+                    <source></source>
                     <providerSelection>${groovy.major.version}</providerSelection>
                 </configuration>
                 <executions>
@@ -57,8 +60,11 @@
                 <dependencies>
                     <dependency>
                         <groupId>org.codehaus.gmaven.runtime</groupId>
-                        <artifactId>gmaven-runtime-1.7</artifactId>
-                        <version>1.3</version>
+                        <artifactId>gmaven-runtime-2.0</artifactId>
+                        <!-- <artifactId>gmaven-runtime-1.7</artifactId> for groovy 1.8 -->
+                        <version>1.5</version>
+                       <!-- <version>1.3</version> for groovy 1.8 -->
+
                         <exclusions>
                             <exclusion>
                                 <groupId>org.codehaus.groovy</groupId>
@@ -76,7 +82,8 @@
             <plugin>
                 <groupId>org.spockframework</groupId>
                 <artifactId>spock-maven</artifactId>
-                <version>0.6-groovy-1.8</version>
+                <version>${org.spockframework.version}</version>
+                <!-- <version>0.6-groovy-${groovy.major.version}</version> for groovy 1.8 -->
                 <executions>
                     <execution>
                         <goals>
@@ -93,7 +100,7 @@
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
-            <version>0.7-groovy-1.8</version>
+            <version>${org.spockframework.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
