Adding tests using interaction with mocks, currently test failing for transaction failure in BankingService

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,14 @@
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
         </dependency>
+        <dependency>
+            <!-- Required for mocking Classes -->
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>3.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
